--- a/index.html
+++ b/index.html
@@ -36,41 +36,44 @@
 			<button type="submit" class="btn btn-submit">Send</button>
 		</form>
 		</div>
+		<div class="arrow-bottom"></div>
 	</section>
 	<section class="latestDesign">
-	<div class="wrapper">
-		<h2 class="latestDesign__header">LATEST DESIGN STYLE</h2>
-		<p class="latestDesign__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-	</div>
-	<div id="arrow-bottom"></div>
+		<div class="wrapper">
+			<h2 class="latestDesign--header">LATEST DESIGN STYLE</h2>
+			<p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		</div>
+		<div class="arrow-bottom"></div>
+		<img src="img/iphone-6.png" class="iphoneImg" alt="iphone">
 	</section>
 	<section class="highlights">
 	<div class="wrapper">
 		<h3 class="section-header">FEATURES OF APP</h3>
 		<p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		<div class="highlights__pros">
-			<div class="highlights__pros--item">
-				<img src="" alt="">
+		<div class="highlights--pros">
+			<div class="highlights--pros--item">
+				<div class="highlights--pros--item--shape"><img src="img/cart.svg" alt="plane"></div>
 				<h4>Lorem ipsum dolor sit</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
 			</div>
-			<div class="highlights__pros--item">
-				<img src="" alt="">
+			<div class="highlights--pros--item">
+				<div class="highlights--pros--item--shape"><img src="img/plane.svg" alt="plane"></div>
 				<h4>ametconsectetur</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
 			</div>
-			<div class="highlights__pros--item">
-				<img src="" alt="">
+			<div class="highlights--pros--item">
+				<div class="highlights--pros--item--shape"><img src="img/arrows.svg" alt="plane"></div>
 				<h4>Lorem ipsum dolor sit </h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
 			</div>
-			<div class="highlights__pros--item">
-				<img src="" alt="">
+			<div class="highlights--pros--item">
+				<div class="highlights--pros--item--shape"><img src="img/window.svg" alt="plane"></div>
 				<h4>Lorem ipsum dolor sit</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 		</div>
 	</div>
+	<div class="arrow-bottom"></div>
 	</section>
 	<section class="features">
 	<div class="wrapper">
@@ -188,37 +191,40 @@
 				</div>
 			</div>
 		</div>
-		</div>
+		<p>0, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	</div>
 	</section>
 	<section class="promo">
 	<div class="wrapper">
+		<div class="logo--promo"><img src="img/logo.svg" alt="Eclipse" width="177" height="177"></div>
 		<h1 class="head-slogan">Push yourself & your designs</h1>
 		<p class="head-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		<div class="logo--promo"><img src="img/logo.svg" alt="Eclipse" width="177" height="177"</div>
-		<div class="promo__notebook"><img src="img/notebook--big.png" alt="notebook"></div>
+		
+		<div class="promo--notebook"><img src="img/notebook--big.png" alt="notebook"></div>
 	</div>
 	</section>
 	<footer class="footer">
 	<div class="wrapper">
 		<div class="social">
-			<div class="twitter"><button class="btn" type="button">Tweet</button></div>
-			<div class="fb"><button class="btn" type="button">Share</button></div>
+			<div class="social--item twitter"><button class="btn" type="button">Tweet</button></div>
+			<div class="social--item fb"><button class="btn" type="button">Share</button></div>
 		</div>
-		<div class="footer__wrap">
-			<ul class="footer__menu">
-				<li>About us</li>
-				<li>Support</li>
-				<li>Why buy</li>
-				<li>Affiliates</li>
-				<li>Contact Us</li>
-				<li>Returns</li>
+		<div class="footer--wrap">
+			<ul class="footer--menu">
+				<li><a href="#">About us</a></li>
+				<li><a href="#">Support</a></li>
+				<li><a href="#">Why buy</a></li>
+				<li><a href="#">Affiliates</a></li>
+				<li><a href="#">Contact Us</a></li>
+				<li><a href="#">Returns</a></li>
 			</ul>
 			<div class="copyright">
 				<span>Made in Melbourne By BlazRobar.com @BlazRobar</span>
 				<span> Copyright © 2016, Cool stuff here</span>
 			</div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing </p>
+			<p class="footer--end">Lorem ipsum dolor sit amet, consectetur adipisicing </p>
 		</div>
+		
 	</div>
 	</footer>
 	
