--- a/index.html
+++ b/index.html
@@ -80,113 +80,89 @@
 		<h3 class="section-header">OUR DESIGN GUIDELINES</h3>
 		<p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
 		<div class="filter">
-			<div id="dev">development</div>
-			<div id="design">design</div>
-			<div id="business">business</div>
-			<div id="arts">arts</div>
+			<div class="filter--item" id="dev">development</div>
+			<div class="filter--item filter--item__active" id="design">design</div>
+			<div class="filter--item" id="business">business</div>
+			<div class="filter--item" id="arts">arts</div>
 		</div>
 		<div class="filter-output" id="filter-output">
-			<div id="dev__items">
-				<div>
+			<div class="output--items" id="dev__items">
+				<div class="output--item">
 					<a href="">
-						<img src="" alt="">
-						<h4></h4>
+						<img src="img/layer-3.png" alt="">
+						<h4>DEV LISTING ONE</h4>
 					</a>
 				</div>
-				<div>
+				<div class="output--item">
 					<a href="">
-						<img src="" alt="">
-						<h4></h4>
+						<img src="img/layer-3.png" alt="">
+						<h4>DEV LISTING ONE</h4>
 					</a>
 				</div>
-				<div>
+				<div class="output--item">
 					<a href="">
-						<img src="" alt="">
-						<h4></h4>
-					</a>
-				</div>
-				<div>
-					<a href="">
-						<img src="" alt="">
-						<h4></h4>
+						<img src="img/layer-3.png" alt="">
+						<h4>DEV LISTING ONE</h4>
 					</a>
 				</div>
 			</div>
-			<div id="design__items">
-				<div>
+			<div class="output--items" id="design__items">
+				<div class="output--item">
 					<a href="">
-						<img src="" alt="">
-						<h4></h4>
+						<img src="img/layer-3.png" alt="">
+						<h4>DESIGN LISTING ONE</h4>
 					</a>
 				</div>
-				<div>
+				<div class="output--item">
 					<a href="">
-						<img src="" alt="">
-						<h4></h4>
+						<img src="img/layer-3.png" alt="">
+						<h4>DESIGN LISTING ONE</h4>
 					</a>
 				</div>
-				<div>
+				<div class="output--item">
 					<a href="">
-						<img src="" alt="">
-						<h4></h4>
-					</a>
-				</div>
-				<div>
-					<a href="">
-						<img src="" alt="">
-						<h4></h4>
+						<img src="img/layer-3.png" alt="">
+						<h4>DESIGN LISTING ONE</h4>
 					</a>
 				</div>
 			</div>
-			<div id="business__items">
-				<div>
+			<div class="output--items" id="business__items">
+				<div class="output--item">
 					<a href="">
-						<img src="" alt="">
-						<h4></h4>
+						<img src="img/layer-3.png" alt="">
+						<h4>BUSINESS LISTING ONE</h4>
 					</a>
 				</div>
-				<div>
+				<div class="output--item">
 					<a href="">
-						<img src="" alt="">
-						<h4></h4>
+						<img src="img/layer-3.png" alt="">
+						<h4>BUSINESS LISTING ONE</h4>
 					</a>
 				</div>
-				<div>
+				<div class="output--item">
 					<a href="">
-						<img src="" alt="">
-						<h4></h4>
-					</a>
-				</div>
-				<div>
-					<a href="">
-						<img src="" alt="">
-						<h4></h4>
+						<img src="img/layer-3.png" alt="">
+						<h4>BUSINESS LISTING ONE</h4>
 					</a>
 				</div>
 			</div>
-			<div id="arts__items">
-				<div>
+			<div class="output--items" id="arts__items">
+				<div class="output--item">
 					<a href="">
-						<img src="" alt="">
-						<h4></h4>
+						<img src="img/layer-3.png" alt="">
+						<h4>ARTS LISTING ONE</h4>
 					</a>
 				</div>
-				<div>
+				<div class="output--item">
 					<a href="">
-						<img src="" alt="">
-						<h4></h4>
+						<img src="img/layer-3.png" alt="">
+						<h4>ARTS LISTING ONE</h4>
 					</a>
 				</div>
-				<div>
+				<div class="output--item">
 					<a href="">
-						<img src="" alt="">
-						<h4></h4>
-					</a>
-				</div>
-				<div>
-					<a href="">
-						<img src="" alt="">
-						<h4></h4>
+						<img src="img/layer-3.png" alt="">
+						<h4>ARTS LISTING ONE</h4>
 					</a>
 				</div>
 			</div>
