--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					</a>
 				</div>
 			</div>
-			<div class="output--items" id="design__items">
+			<div class="output--items output--items__active" id="design__items">
 				<div class="output--item">
 					<a href="">
 						<img src="img/layer-3.png" alt="">
@@ -167,7 +167,7 @@
 				</div>
 			</div>
 		</div>
-		<p>0, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		
 	</div>
 	</section>
 	<section class="promo">
@@ -204,7 +204,7 @@
 	</div>
 	</footer>
 	
-	
+	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
