--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	
 </head>
 <body>
-	<header class="header">
+	<header class="header" id="header">
 	<div class="wrapper">
-		<div class="logo--header"><img src="img/logo.svg" alt="Eclipse" width="68" height="68"></div>
+		<a class="logo--header"><img src="img/logo.svg" alt="Eclipse" width="68" height="68"></a>
 		<div class="menu">
 			<ul>
 				<li><a href="#">About</a></li>
