--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	
 </head>
 <body>
+	<!-- Preloader -->
+	<div id="preloader">
+		<div id="status">&nbsp;</div>
+	</div>
 	<header class="header" id="header">
 	<div class="wrapper">
 		<a class="logo--header"><img src="img/logo.svg" alt="Eclipse" width="68" height="68"></a>
@@ -204,7 +208,9 @@
 	</div>
 	</footer>
 	
+
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/script.js"></script>
+
 </body>
 </html>
