--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- Preloader -->
 	<div id="preloader">
-		<div id="status">&nbsp;</div>
+		<div id="status">Loading &nbsp;</div>
 	</div>
 	<!-- Sticky button -->
 	<div id="contactUs">
