--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<header class="header" id="header">
 	
 	<div class="wrapper">
-		<a class="logo--header"><img src="img/logo.svg" alt="Eclipse" width="68" height="68"></a>
+		<a href="#" class="logo--header"><img src="img/logo.svg" alt="Eclipse" width="68" height="68"></a>
 		<div class="menu">
 			<ul>
 				<li><a href="#">About</a></li>
